added new paragraph

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
     <h1>This is my first website</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptatum sit blanditiis quaerat, ad odio alias ut quisquam tempora velit ducimus sunt eligendi totam placeat.</p>
+
+    <p>Here is another paragraph for my website. Blah blah blah.</p>
 </body>
 
 </html>
 
+<!-- adding code to github -->
 <!-- git add . -->
+<!-- git commit -m "message" -->
+<!-- git push -->
+
+<!-- Configuring email and user name -->
+<!-- git config --global user.email "mahmoodabadmedia@outlook.com" -->
+<!-- git config --global user.name "Maahir Sheikh" -->
